# vpn007

./: .env.sample  Dockerfile.amneziawg  Dockerfile.nginx  LICENSE  README.md  THIRD-PARTY-LICENSES  docker-entrypoint-awg.sh  pyproject.toml
scripts/: cleanup.sh  scan_subnet.py  vpn007-fw.sh
src/vpn007/: __init__.py  __main__.py  blocklist.py  cli.py  clients.py  compose.py  config.py  crypto.py  docker_ops.py  docs.py  exit_node.py  firewall.py  forwarding.py  generator.py  hostname_resolver.py  models.py  nginx.py  prerequisites.py  summary.py  system_ops.py  validator.py  xray.py
src/vpn007/templates/: README.md.j2  blocklist-updater.service.j2  blocklist-updater.sh.j2  blocklist-updater.timer.j2  certbot-renew.service.j2  certbot-renew.sh.j2  certbot-renew.timer.j2  client-guides.md.j2  docker-compose.yml.j2  exit-node-nftables.conf.j2  exit-node-wg.conf.j2  forwarding-script.py.j2  hostname-resolver.service.j2  hostname-resolver.sh.j2  hostname-resolver.timer.j2  nftables.conf.j2  nginx-http.conf.j2  nginx-stream.conf.j2  nginx.conf.j2  troubleshooting.md.j2  xray-config.json.j2
tests/: __init__.py  conftest.py  test_cli.py  test_clients.py  test_compose.py  test_config.py  test_crypto.py  test_docker_ops.py  test_docs.py  test_firewall.py  test_forwarding.py  test_generator.py  test_main.py  test_nginx.py  test_prerequisites.py  test_summary.py  test_system_ops.py  test_validator.py  test_xray.py
