[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vpn007"
version = "0.1.0"
description = "CLI deployer for multiple anti-censorship VPN services on a single Linux VM"
readme = "README.md"
license = "GPL-3.0-only"
requires-python = ">=3.12"
authors = [
    { name = "Vadim Pavlov" },
]
keywords = ["vpn", "deployment", "docker", "xray", "amneziawg", "tailscale", "anti-censorship"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: System :: Networking",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "python-dotenv>=1.0",
    "Jinja2>=3.1",
    "cryptography>=42.0",
]

[project.urls]
Homepage = "https://github.com/Homas/vpn007"
Repository = "https://github.com/Homas/vpn007"
Issues = "https://github.com/Homas/vpn007/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "hypothesis>=6.100",
    "pyyaml>=6.0",
    "ruff>=0.4",
]

[project.scripts]
vpn007 = "vpn007.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
